--- a/rest/restaurant/static/about.html
+++ b/rest/restaurant/static/about.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Rio Foods</title>
+    <title>About Us - AJITH Foods</title>
     <style>
         body {
             background-color: rgb(145, 112, 160);
@@ -11,7 +11,7 @@
             padding: 0;
         }
         header {
-            background-color: rgb(34, 87, 88);
+            background-color: rgb(95, 173, 174);
             color: white;
             padding: 15px 20px;
             text-align: center;
@@ -19,15 +19,15 @@
         nav {
             display: flex;
             justify-content: center;
-            background-color: rgb(14, 239, 40);
+            background-color: rgb(162, 215, 168);
         }
         nav a {
-            color: rgb(124, 92, 92);
+            color: rgba(115, 108, 108, 0.574);
             text-decoration: none;
             padding: 14px 20px;
         }
         nav a:hover {
-            background-color: rgb(10, 212, 248);
+            background-color: rgba(100, 134, 140, 0.674);
         }
         section {
             padding: 20px;
@@ -40,7 +40,7 @@
             text-align: justify;
         }
         footer {
-            background-color: rgb(108, 75, 36);
+            background-color: rgb(135, 102, 61);
             color: white;
             text-align: center;
             padding: 10px 20px;
@@ -66,7 +66,7 @@
     </section>
     <footer>
         <p>&copy; The Great Indian Kitchen. All Rights Reserved.</p>
-        <p> designed and developed by: THARRUN D</p>
+        <p> designed and developed by: AJITH A</p>
     </footer>
 </body>
 </html>
