--- a/rest/restaurant/static/contact.html
+++ b/rest/restaurant/static/contact.html
@@ -58,14 +58,14 @@
     <section>
         <h2>A warm welcome</h2>
         <div class="contact-info">
-            <p><strong>Phone:</strong> 8754561603</p>
+            <p><strong>Phone:</strong> 9363649428</p>
             <p><strong>Email:</strong> thegreatindiankitchen@gmail.com</p>
             <p><strong>Address:</strong> 340, 341, 2nd Ave, G Block, Ranganathan Garden, Anna Nagar, Chennai, Tamil Nadu 600040</p>
             <p>we value your feedback</p>
     </section>
     <footer>
         <p>&copy; The Great Indian Kitchen. All Rights Reserved.</p>
-        <p> designed and developed by: THARRUN D</p>
+        <p> designed and developed by: AJITH A</p>
     </footer>
 </body>
 </html>
