--- a/rest/restaurant/static/index.html
+++ b/rest/restaurant/static/index.html
@@ -96,7 +96,7 @@
     </section>
     <footer>
         <p>&copy; The Great Indian Kitchen. All Rights Reserved.</p>
-        <p> designed and developed by: THARRUN D </p>
+        <p> designed and developed by: AJITH A </p>
     </footer>
 </body>
 </html>
