--- a/rest/restaurant/static/menu.html
+++ b/rest/restaurant/static/menu.html
@@ -5,7 +5,7 @@
     <title>Menu - The Great Indian Kitchen</title>
     <style>
         body {
-            background-color: rgb(200, 96, 205);
+            background-color: rgb(194, 174, 195);
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
@@ -22,7 +22,7 @@
             background-color: rgb(85, 241, 90);
         }
         nav a {
-            color: rgb(248, 97, 97);
+            color: rgb(101, 66, 66);
             text-decoration: none;
             padding: 14px 20px;
         }
@@ -89,7 +89,7 @@
     </section>
     <footer>
         <p>&copy; The Great Indian Kitchen. All Rights Reserved.</p>
-        <p> designed and developed by: THARRUN D</p>
+        <p> designed and developed by: AJITH A</p>
     </footer>
 </body>
 </html>
